fix(mock-llm): Remove MOCK_LLM_MODE from Dockerfile.e2e + add RecoveryResponse import
- Remove hardcoded MOCK_LLM_MODE=true from holmesgpt-api/Dockerfile.e2e
  - HAPI now uses standalone Mock LLM service at http://mock-llm:8080
  - Aligns with Mock LLM Migration Phase 5 (E2E Integration)

- Fix NameError in recovery endpoint tests
  - Add RecoveryResponse to imports in result_parser.py
  - Resolves 9 failing recovery E2E tests

Phase: Mock LLM Migration Phase 5.2 (HAPI E2E Integration)
BR: BR-TEST-001 (Mock LLM Migration)
Related: Phase 7 will remove embedded mock code after validation

--- a/holmesgpt-api/Dockerfile.e2e
+++ b/holmesgpt-api/Dockerfile.e2e
@@ -77,13 +77,12 @@ USER 1001
 
 # Environment variables
 # CRITICAL: PYTHONPATH ensures Python 3.12 finds packages in /opt/app-root/lib/python3.12/site-packages
-# MOCK_LLM_MODE: Enable mock LLM responses for E2E tests (BR-HAPI-212)
+# V2.0 (Mock LLM Migration - January 2026): MOCK_LLM_MODE removed, now uses standalone Mock LLM service
 ENV PYTHONUNBUFFERED=1 \
 	PYTHONDONTWRITEBYTECODE=1 \
 	PATH="/opt/app-root/bin:${PATH}" \
 	PYTHONPATH="/opt/app-root/lib/python3.12/site-packages:${PYTHONPATH}" \
-	HOME=/opt/app-root \
-	MOCK_LLM_MODE=true
+	HOME=/opt/app-root
 
 # Expose port
 EXPOSE 8080
