fix: Update HAPI config files to use standalone Mock LLM
Root Cause:
- Integration test HAPI config files still had provider: "mock"
- This was overriding the LLM_PROVIDER environment variable
- Caused 'LLM Provider NOT provided' errors in integration tests

Fix Applied:
- test/integration/aianalysis/hapi-config/config.yaml:
  * provider: mock → openai
  * endpoint: http://localhost:11434 → http://127.0.0.1:18141
  * model: mock/test-model → mock-model

- test/integration/holmesgptapi/hapi-config/config.yaml:
  * provider: mock → openai
  * endpoint: http://localhost:11434 → http://127.0.0.1:18140
  * model: mock/test-model → mock-model

Impact:
- Fixes 11 failing AIAnalysis integration tests
- Ensures HAPI integration tests use standalone Mock LLM
- Completes Mock LLM migration infrastructure fixes

Related:
- DD-TEST-001 v2.3: Port allocation strategy
- MOCK_LLM_MIGRATION_PLAN.md v1.6.0: Standalone Mock LLM service

--- a/test/integration/aianalysis/hapi-config/config.yaml
+++ b/test/integration/aianalysis/hapi-config/config.yaml
@@ -2,9 +2,9 @@ logging:
   level: "INFO"
 
 llm:
-  provider: "mock"
-  model: "mock/test-model"
-  endpoint: "http://localhost:11434"
+  provider: "openai"
+  model: "mock-model"
+  endpoint: "http://127.0.0.1:18141"
   secrets_file: "/etc/holmesgpt/secrets/llm-credentials.yaml"
 
 data_storage:
