fix: Use container-to-container networking for Mock LLM endpoint
ROOT CAUSE - The Real Bug:
- Mock LLM container listening on 0.0.0.0:8080 ✅ (from earlier fix)
- Threading fix applied (ThreadingHTTPServer) ✅
- BUT: HAPI container configured to connect to 127.0.0.1:18XXX ❌
- 127.0.0.1 inside HAPI container = HAPI's localhost, not Mock LLM!

Connection Flow (BROKEN):
1. HAPI container starts, reads LLM_ENDPOINT=http://127.0.0.1:18141
2. HAPI tries to connect to its own localhost:18141
3. Nothing listening there (Mock LLM is on different container)
4. Connection refused/error

Connection Flow (FIXED):
1. HAPI container starts, reads LLM_ENDPOINT=http://mock-llm-aianalysis:8080
2. Podman DNS resolves mock-llm-aianalysis to Mock LLM container IP
3. Connection succeeds (Mock LLM listening on 0.0.0.0:8080)
4. ThreadingHTTPServer handles concurrent requests ✅

Changes Applied:
1. Added GetMockLLMContainerEndpoint() for container-to-container URLs
   - Returns http://<container-name>:8080
   - Used for LLM_ENDPOINT env var in HAPI containers

2. Kept GetMockLLMEndpoint() for host-to-container URLs
   - Returns http://127.0.0.1:<port>
   - Used for health checks from test host

3. Updated AIAnalysis suite to use container endpoint
   - LLM_ENDPOINT: http://mock-llm-aianalysis:8080

4. Updated HAPI integration config to use container endpoint
   - llm.endpoint: http://mock-llm-hapi:8080

5. Updated AIAnalysis HAPI config to use container endpoint
   - llm.endpoint: http://mock-llm-aianalysis:8080

This Explains Everything:
- Threading fix WAS correct (verified ThreadingHTTPServer in code)
- --no-cache WAS working (verified full rebuild in logs)
- Mock LLM WAS listening on 0.0.0.0:8080 (verified earlier)
- BUT: HAPI was connecting to the wrong address!

Expected Outcome:
- HAPI containers can now reach Mock LLM via Podman network
- All 57 integration tests should pass
- Zero connection errors

--- a/test/integration/aianalysis/hapi-config/config.yaml
+++ b/test/integration/aianalysis/hapi-config/config.yaml
@@ -4,7 +4,7 @@ logging:
 llm:
   provider: "openai"
   model: "mock-model"
-  endpoint: "http://127.0.0.1:18141"
+  endpoint: "http://mock-llm-aianalysis:8080"  # Container-to-container (was 127.0.0.1:18141 which only works from host)
   secrets_file: "/etc/holmesgpt/secrets/llm-credentials.yaml"
 
 data_storage:
