--- a/test/integration/holmesgptapi/hapi-config/config.yaml
+++ b/test/integration/holmesgptapi/hapi-config/config.yaml
@@ -8,7 +8,7 @@ logging:
 llm:
   provider: "openai"
   model: "mock-model"
-  endpoint: "http://127.0.0.1:18140"
+  endpoint: "http://mock-llm-hapi:8080"  # Container-to-container (was 127.0.0.1:18140 which only works from host)
   secrets_file: "/etc/holmesgpt/secrets/llm-credentials.yaml"
 
 data_storage:
