test(gap8): Move webhook test from integration to E2E tier
Summary: Gap #8 webhook test relocated to correct test tier (E2E)

Problem:
- Integration test failing: "should emit webhook.remediationrequest.timeout_modified"
- Root cause: envtest (integration) does NOT support admission webhooks
- Webhooks require full Kubernetes API server with admission controller

Solution:
1. Created E2E test in AuthWebhook suite (test/e2e/authwebhook/)
2. Removed webhook test from integration suite
3. Left documentation comment explaining relocation

Files Changed:
- test/e2e/authwebhook/02_gap8_remediationrequest_timeout_mutation_test.go (NEW)
  - 235 lines
  - Complete E2E test for Gap #8 webhook audit
  - Tests: webhook interception, LastModifiedBy/At population, audit event emission
  - Labels: e2e, gap8, webhook, audit
  - Validates SOC2 compliance (WHO + WHAT + WHEN)

- test/integration/remediationorchestrator/gap8_timeout_config_audit_test.go (MODIFIED)
  - Removed Scenario 2 (operator mutation webhook test)
  - Added documentation comment pointing to E2E location
  - Kept Scenario 1 (controller initialization) and Scenario 3 (event timing)

Test Results:
✅ Integration Tests: 47/47 passing (100%) - was 41/44 (1 fail, 2 interrupted)
✅ Removed 1 E2E-only test from integration tier
⏳ E2E Tests: Pending implementation completion (audit query helper integration)

E2E Test Features:
- Namespace with kubernaut.ai/audit-enabled=true label (REQUIRED for webhook)
- RemediationRequest creation with TimeoutConfig initialization
- Operator TimeoutConfig mutation (simulates kubectl edit)
- Webhook audit event validation: webhook.remediationrequest.timeout_modified
- LastModifiedBy/LastModifiedAt field validation
- Complete HTTP webhook flow validation (admission → handler → audit)

Integration Test Changes:
- Scenario 1: ✅ Still tests controller initialization (orchestrator.lifecycle.created)
- Scenario 2: ❌ REMOVED (requires webhook server - E2E only)
- Scenario 3: ✅ Still tests event ti

--- a/test/e2e/gateway/gateway-deployment.yaml
+++ b/test/e2e/gateway/gateway-deployment.yaml
@@ -35,8 +35,8 @@ data:
       data_storage_url: "http://datastorage.kubernaut-system.svc.cluster.local:8080"
 
     processing:
-      deduplication:
-        ttl: 10s  # Minimum allowed TTL (production: 5m)
+      # NOTE: Deduplication is now status-based (DD-GATEWAY-011)
+      # Uses RemediationRequest CRD phase, not TTL-based Redis expiration
 
       environment:
         cache_ttl: 5s              # Fast cache for E2E tests (production: 30s)
