--- a/config/crd/bases/kubernaut.ai_signalprocessings.yaml
+++ b/config/crd/bases/kubernaut.ai_signalprocessings.yaml
@@ -692,6 +692,17 @@ spec:
                     description: Time since first failure
                     type: string
                 type: object
+              severity:
+                description: |-
+                  Severity determination (DD-SEVERITY-001)
+                  Normalized severity determined by Rego policy: "critical", "warning", or "info"
+                  Enables downstream services (AIAnalysis, RemediationOrchestrator, Notification)
+                  to interpret alert urgency without understanding external severity schemes.
+                enum:
+                - critical
+                - warning
+                - info
+                type: string
               startTime:
                 description: Processing timestamps
                 format: date-time
