--- a/config/crd/bases/kubernaut.ai_remediationrequests.yaml
+++ b/config/crd/bases/kubernaut.ai_remediationrequests.yaml
@@ -498,6 +498,52 @@ spec:
                   Reference: BR-ORCH-028
                 format: date-time
                 type: string
+              executionRef:
+                description: |-
+                  ExecutionRef references the WorkflowExecution CRD for this remediation.
+                  Populated from workflowexecution.execution.started audit event.
+                  Reference: BR-AUDIT-005 Gap #6 (Execution Reference)
+                properties:
+                  apiVersion:
+                    description: API version of the referent.
+                    type: string
+                  fieldPath:
+                    description: |-
+                      If referring to a piece of an object instead of an entire object, this string
+                      should contain a valid JSON/Go field access statement, such as desiredState.manifest.containers[2].
+                      For example, if the object reference is to a container within a pod, this would take on a value like:
+                      "spec.containers{name}" (where "name" refers to the name of the container that triggered
+                      the event) or if no container name is specified "spec.containers[2]" (container with
+                      index 2 in this pod). This syntax is chosen only to have some well-defined way of
+                      referencing a part of an object.
+                    type: string
+                  kind:
+                    description: |-
+                      Kind of the referent.
+                      More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+                    type: string
+                  name:
+                    description: |-
+                      Name of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                    type: string
+                  namespace:
+                    description: |-
+                      Namespace of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
+                    type: string
+                  resourceVersion:
+                    description: |-
+                      Specific resourceVersion to which this reference is made, if any.
+                      More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency
+                    type: string
+                  uid:
+                    description: |-
+                      UID of the referent.
+                      More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
               failurePhase:
                 description: |-
                   FailurePhase indicates which phase failed (e.g., "ai_analysis", "workflow_execution")
@@ -712,6 +758,31 @@ spec:
                   cleaned up (24 hours after completion)
                 format: date-time
                 type: string
+              selectedWorkflowRef:
+                description: |-
+                  SelectedWorkflowRef captures the workflow selected by AI for this remediation.
+                  Populated from workflowexecution.selection.completed audit event.
+                  Reference: BR-AUDIT-005 Gap #5 (Workflow Selection)
+                properties:
+                  containerDigest:
+                    description: ContainerDigest for audit trail and reproducibility
+                    type: string
+                  containerImage:
+                    description: |-
+                      ContainerImage resolved from workflow catalog
+                      OCI bundle reference for Tekton PipelineRun
+                    type: string
+                  version:
+                    description: Version of the workflow
+                    type: string
+                  workflowId:
+                    description: WorkflowID is the catalog lookup key
+                    type: string
+                required:
+                - containerImage
+                - version
+                - workflowId
+                type: object
               signalProcessingRef:
                 description: References to downstream CRDs
                 properties:
