feat(signalprocessing): Initialize SeverityClassifier in integration tests
Integration Test Infrastructure:
- Add SeverityClassifier initialization in suite_test.go
- Create severity Rego policy with enterprise severity mappings (Sev1-4, P0-P3)
- Load policy and start hot-reload for integration testing
- Wire SeverityClassifier into SignalProcessingReconciler
- Add cleanup for severity policy temp file

Policy Features:
- Maps Sev1/P0/P1 → critical
- Maps Sev2/P2 → warning
- Maps Sev3/P3 → info
- Policy-defined fallback → critical (Strategy B: operator-defined)

Test Results:
- New severity integration tests running (10 tests executed)
- 1 test failing (needs controller audit emission)
- 9 tests interrupted (parallel execution race - unrelated)

GREEN Phase: Step 6 Progress (Integration tests initializing)
Next: Fix failing test + add audit event emission

--- a/api/openapi/data-storage-v1.yaml
+++ b/api/openapi/data-storage-v1.yaml
@@ -205,6 +205,11 @@ paths:
           in: query
           schema:
             type: string
+        - name: workflow_name
+          in: query
+          schema:
+            type: string
+          description: Filter by workflow name (exact match for test idempotency)
         - name: limit
           in: query
           schema:
@@ -1006,25 +1011,25 @@ paths:
       summary: Reconstruct RemediationRequest from audit trail
       description: |
         Reconstructs a complete RemediationRequest CRD from audit trail events.
-        
+
         **Business Requirement**: BR-AUDIT-006 (SOC2 compliance)
-        
+
         **Workflow**:
         1. Query audit events for given correlation_id
         2. Parse gateway and orchestrator events
         3. Map audit data to RR Spec/Status fields
         4. Build complete Kubernetes-compliant CRD
         5. Validate completeness and quality
-        
+
         **Use Cases**:
         - Disaster recovery (recreate lost RRs from audit trail)
         - Compliance audits (prove RR state at any point in time)
         - Debugging (understand RR evolution from audit events)
-        
+
         **Returns**:
         - Reconstructed RR in YAML format
         - Validation result (completeness percentage, warnings, errors)
-        
+
         **Authentication**: Protected by OAuth-proxy in production/E2E.
         Integration tests use mock X-Auth-Request-User header.
       operationId: reconstructRemediationRequest
@@ -1380,7 +1385,7 @@ components:
           description: |
             Correlation ID used for reconstruction.
           example: "rr-prometheus-alert-highcpu-abc123"
-    
+
     ValidationResult:
       type: object
       description: |
@@ -1425,7 +1430,7 @@ components:
             Helps identify gaps in reconstruction.
           example:
             - "SignalAnnotations are missing (Gap #3) - annotations provide additional metadata"
-    
+
     RFC7807Problem:
       type: object
       description: |
