feat(signalprocessing): DD-SEVERITY-001 GREEN Phase - Option A Complete!
CRD Schema Updates (DD-SEVERITY-001):
- Remove enum restriction from Spec.Signal.Severity (allows external severity schemes)
- Keep enum restriction on Status.Severity (critical/warning/info)
- Allows external values like Sev1, P0, P1, etc. in Spec
- Normalized values stored in Status per Rego policy

Controller Updates:
- Add RecordClassificationDecision audit call in reconcileClassifying
- Emit classification.decision audit event with severity determination
- Called after atomic status update to include normalized severity

Test Fixes:
- Fix test fingerprint to be valid 64-char hex string
- Update createTestSignalProcessingCRD helper

Test Results:
✅ should persist normalized severity: PASSING (was failing)

GREEN Phase: Ready for full integration test run

--- a/config/crd/bases/kubernaut.ai_signalprocessings.yaml
+++ b/config/crd/bases/kubernaut.ai_signalprocessings.yaml
@@ -131,11 +131,10 @@ spec:
                     format: date-time
                     type: string
                   severity:
-                    description: Severity level
-                    enum:
-                    - critical
-                    - warning
-                    - info
+                    description: |-
+                      Severity level (external/raw value from monitoring system)
+                      DD-SEVERITY-001: No enum restriction - allows external severity schemes (Sev1-4, P0-P4, etc.)
+                      Normalized severity is stored in Status.Severity
                     type: string
                   source:
                     description: Adapter that ingested the signal
