--- a/api/openapi/data-storage-v1.yaml
+++ b/api/openapi/data-storage-v1.yaml
@@ -2557,6 +2557,22 @@ components:
           enum: [critical, warning, info]
           description: Severity level of the signal
 
+        # DD-SEVERITY-001: Severity Determination Fields (conditional)
+        external_severity:
+          type: string
+          description: Original severity from external monitoring system (e.g., Sev1, P0, critical)
+          example: "Sev2"
+        normalized_severity:
+          type: string
+          enum: [critical, warning, info]
+          description: Normalized severity determined by Rego policy
+          example: "warning"
+        determination_source:
+          type: string
+          enum: [rego-policy, fallback, default]
+          description: Source of severity determination for audit trail
+          example: "rego-policy"
+
         # Classification Fields (conditional)
         environment:
           type: string
