--- a/test/integration/signalprocessing/config/config.yaml
+++ b/test/integration/signalprocessing/config/config.yaml
@@ -16,8 +16,8 @@ database:
   name: action_history
   user: slm_user
   ssl_mode: disable
-  max_open_conns: 25
-  max_idle_conns: 5
+  max_open_conns: 100  # Increased for 12 parallel test processes
+  max_idle_conns: 50   # Increased to reduce connection churn
   conn_max_lifetime: 5m
   conn_max_idle_time: 10m
   secretsFile: "/etc/datastorage/db-secrets.yaml"
