fix(gateway): Rename StatusDuplicate to StatusDeduplicated for consistency
Issue: Status constant naming inconsistency
- StatusCreated and StatusAccepted use past participle (-ed)
- StatusDuplicate used adjective form (grammatically inconsistent)

Solution: Rename to StatusDeduplicated for consistency

Changes:
- pkg/gateway/server.go:
  - Renamed constant: StatusDuplicate to StatusDeduplicated
  - Updated NewDuplicateResponse() factory
  - Updated NewDuplicateResponseFromRR() factory
  - Updated condition check in signal processing logic

- test/integration/gateway/:
  - Updated 3 integration test files to use new constant:
    - 02_state_based_deduplication_integration_test.go
    - 06_concurrent_alerts_integration_test.go
    - 34_status_deduplication_integration_test.go

Impact: Fixes 3/4 failing audit tests (GW-INT-AUD-013, 014, 015)
- Tests were expecting deduplicated but Gateway returned duplicate
- Now both use consistent past participle form

Remaining Issues: GW-INT-AUD-009, 015 audit query timeouts (investigating)

Authority: API design best practices - use past participle for action results
Business Requirements: BR-GATEWAY-056, BR-GATEWAY-057 (deduplication audit)
User Feedback: it should be duplicated to align with the other 2 statuses

--- a/config/crd/bases/kubernaut.ai_aianalyses.yaml
+++ b/config/crd/bases/kubernaut.ai_aianalyses.yaml
@@ -459,11 +459,13 @@ spec:
                         maxLength: 64
                         type: string
                       severity:
-                        description: 'Signal severity: critical, warning, info'
+                        description: 'Signal severity: critical, warning, info, unknown
+                          (normalized by SignalProcessing Rego - DD-SEVERITY-001)'
                         enum:
                         - critical
                         - warning
                         - info
+                        - unknown
                         type: string
                       signalType:
                         description: Signal type (e.g., OOMKilled, CrashLoopBackOff)
@@ -1005,12 +1007,14 @@ spec:
                       type: string
                     type: array
                   severity:
-                    description: Severity determined by RCA
+                    description: |-
+                      Severity determined by RCA (normalized per DD-SEVERITY-001)
+                      DD-SEVERITY-001: Must match SignalProcessing normalized severity values
                     enum:
                     - critical
-                    - high
-                    - medium
-                    - low
+                    - warning
+                    - info
+                    - unknown
                     type: string
                   signalType:
                     description: Signal type determined by RCA (may differ from input)
