--- a/config/crd/bases/kubernaut.ai_signalprocessings.yaml
+++ b/config/crd/bases/kubernaut.ai_signalprocessings.yaml
@@ -699,14 +699,17 @@ spec:
                 type: object
               severity:
                 description: |-
-                  Severity determination (DD-SEVERITY-001)
-                  Normalized severity determined by Rego policy: "critical", "warning", or "info"
+                  Severity determination (DD-SEVERITY-001 v1.1)
+                  Normalized severity determined by Rego policy: "critical", "high", "medium", "low", or "unknown"
+                  Aligned with HAPI/workflow catalog severity levels for consistency across platform
                   Enables downstream services (AIAnalysis, RemediationOrchestrator, Notification)
                   to interpret alert urgency without understanding external severity schemes.
                 enum:
                 - critical
-                - warning
-                - info
+                - high
+                - medium
+                - low
+                - unknown
                 type: string
               startTime:
                 description: Processing timestamps
