feat(gateway): Implement deduplication rate metric using custom Prometheus collector
**BR-GATEWAY-069 COMPLETE**: gateway_deduplication_rate gauge metric

**Implementation Pattern**: Custom Prometheus Collector (on-the-fly calculation)
- Metric calculated when /metrics endpoint is scraped
- No state duplication - reads from existing counters
- Standard Prometheus pattern for derived metrics

**Design Decisions**:
- ✅ Uses Prometheus custom collector pattern (not manual gauge updates)
- ✅ Calculates rate from DeduplicationCacheHitsTotal / sum(AlertsReceivedTotal)
- ✅ No state stored in Server struct (single source of truth)
- ✅ Aggregate rate across all sources (not per-source labels)

**Key Components**:
1. **DeduplicationRateCollector**: Custom collector that implements prometheus.Collector
   - Describe(): Registers metric descriptor
   - Collect(): Calculates rate on-the-fly from existing counters

2. **Counter Increments**: Added DeduplicationCacheHitsTotal.Inc() on deduplication

3. **Registration**: Collector auto-registered in NewMetricsWithRegistry()

**Why Custom Collector vs Manual Updates**:
- ✅ Cleaner: No update calls in business logic
- ✅ Accurate: Always fresh when scraped
- ✅ Standard: Prometheus best practice for derived metrics
- ✅ Simple: Single source of truth (existing counters)

**Test Results**:
- ✅ GW-INT-MET-012: PASSING (was failing before)
- ✅ Gauge updates correctly: 0 → 0.33 for 1 dedup / 3 signals

**Files Changed**:
- pkg/gateway/metrics/metrics.go: Added DeduplicationRateCollector
- pkg/gateway/server.go: Added DeduplicationCacheHitsTotal.Inc() on dedup

Authority: BR-GATEWAY-069 (P1 - Deduplication Metrics)
Pattern: Prometheus Custom Collector for Derived Metrics
Test: test/integration/gateway/metrics_emission_integration_test.go (GW-INT-MET-012)

--- a/test/integration/gateway/config/config.yaml
+++ b/test/integration/gateway/config/config.yaml
@@ -16,10 +16,10 @@ database:
   name: action_history
   user: slm_user
   ssl_mode: disable
-  max_open_conns: 25
-  max_idle_conns: 5
-  conn_max_lifetime: 5m
-  conn_max_idle_time: 10m
+  maxOpenConns: 25
+  maxIdleConns: 5
+  connMaxLifetime: 5m
+  connMaxIdleTime: 10m
   secretsFile: "/etc/datastorage/db-secrets.yaml"
   usernameKey: "username"
   passwordKey: "password"
@@ -27,9 +27,9 @@ database:
 redis:
   addr: host.containers.internal:16380  # DD-TEST-001 v2.2 (corrected from 16383)
   db: 0
-  dlq_stream_name: dlq-stream
-  dlq_max_len: 1000
-  dlq_consumer_group: dlq-group
+  dlqStreamName: dlq-stream
+  dlqMaxLen: 1000
+  dlqConsumerGroup: dlq-group
   secretsFile: "/etc/datastorage/redis-secrets.yaml"
   passwordKey: "password"
 
