--- a/test/integration/notification/config/config.yaml
+++ b/test/integration/notification/config/config.yaml
@@ -3,7 +3,9 @@ database:
   port: 15440  # Changed from 15439 to resolve conflict with HAPI (DD-TEST-001 v2.0)
   user: slm_user
   name: action_history
-  sslmode: disable
+  sslMode: disable
+  connMaxLifetime: 30m  # Fix for integration test BeforeSuite failures
+  connMaxIdleTime: 10m  # Connection idle timeout
   secretsFile: /etc/datastorage/db-secrets.yaml
   usernameKey: username
   passwordKey: password
