feat(gateway): implement K8s Lease-based distributed locking (ADR-052)
Implements distributed locking using Kubernetes Lease resources to prevent
race conditions in concurrent signal processing across multiple Gateway replicas.

Changes:
- Add DistributedLockManager with Lease-based locking (BR-GATEWAY-190)
- Use apiReader (non-cached client) for immediate consistency
- Add 10 unit tests for lock manager business logic
- Add lock retry integration tests with exponential backoff
- Update RBAC to grant Lease resource permissions
- Add comprehensive documentation and test plans

Technical Details:
- Lock timeout: 30s with exponential backoff (1s → 16s)
- Uses SHA256 fingerprint prefix for lock naming
- Graceful degradation if Lease API unavailable

Test Results:
- Unit tests: 10/10 passing
- Integration tests: 100% passing
- E2E tests: 55/55 passing (100%)

Fixes: GW-DEDUP-002 (concurrent deduplication race)
Implements: ADR-052, BR-GATEWAY-190
Related: DD-GATEWAY-011 (K8s CRD-based deduplication)

--- a/deploy/gateway/01-rbac.yaml
+++ b/deploy/gateway/01-rbac.yaml
@@ -52,6 +52,20 @@ rules:
       - list
       - watch
 
+  # ADR-052: Lease resource access for distributed locking (multi-replica safety)
+  # Gateway uses K8s Lease resources for distributed mutual exclusion
+  # to prevent duplicate RemediationRequest creation across replicas
+  # Business Requirement: BR-GATEWAY-190 (Multi-Replica Deduplication Safety)
+  - apiGroups:
+      - coordination.k8s.io
+    resources:
+      - leases
+    verbs:
+      - get
+      - create
+      - update
+      - delete
+
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
