fix(gateway): implement DD-SEVERITY-001 severity pass-through
Gateway now acts as "dumb pipe" for severity, passing through raw values
without normalization. SignalProcessing handles normalization via Rego.

Changes:
- Update OpenAPI spec: GatewayAuditPayload.severity (enum → string)
- Regenerate Go and Python OpenAPI clients
- Remove severity mapping logic from Gateway
- Update audit emission to pass raw severity values
- Fix E2E tests to expect raw severity ("warning" not "high")

Architectural Impact:
- Gateway: Captures raw severity from signal source
- SignalProcessing: Normalizes severity via Rego policies
- Audit: Includes both external (raw) and normalized severity

Status:
- DD-SEVERITY-001: 95% complete (E2E scenarios remaining)
- All service implementations: Complete
- Gateway compliance: 100%

Fixes: Architectural violation where Gateway was normalizing severity
Implements: DD-SEVERITY-001 v1.1

--- a/api/openapi/data-storage-v1.yaml
+++ b/api/openapi/data-storage-v1.yaml
@@ -2398,9 +2398,8 @@ components:
           example: "abc123"
         severity:
           type: string
-          enum: [critical, high, medium, low, unknown]
-          description: Normalized severity level (DD-SEVERITY-001 v1.1)
-          example: "critical"
+          description: Raw severity from signal source (pass-through per DD-SEVERITY-001). Gateway does NOT normalize. Accepts ANY value (e.g., "warning", "Sev1", "P0", "critical", etc.). SignalProcessing performs normalization via Rego.
+          example: "warning"
         resource_kind:
           type: string
           description: Kubernetes resource kind
