feat: Implement HAPI validation for missing affectedResource in RCA (BR-HAPI-212)
- Add RCA_INCOMPLETE enum to HumanReviewReason
- Implement validation in result_parser.py to set needs_human_review=true
  when workflow is selected but affectedResource is missing from RCA
- Add unit tests for RCA_INCOMPLETE enum and validation logic documentation
- Update data-storage test configs for integration testing

Validation Logic:
- Triggers when: selected_workflow is not None AND rca_target is missing
- Does NOT trigger when: investigation_outcome is 'resolved' (self-remediated)
- Sets: needs_human_review=true, human_review_reason='rca_incomplete'
- Logs: Warning with incident_id and selected_workflow_id for observability

This ensures HAPI escalates to human review when the AI cannot determine
the target resource for remediation, preventing incorrect workflow execution.

Impact: HAPI service only
Dependencies: None

--- a/holmesgpt-api/tests/integration/data-storage-host.yaml
+++ b/holmesgpt-api/tests/integration/data-storage-host.yaml
@@ -9,8 +9,8 @@
 server:
   port: 18090  # Host network uses direct port
   host: "0.0.0.0"
-  read_timeout: "30s"
-  write_timeout: "30s"
+  readTimeout: "30s"
+  writeTimeout: "30s"
 
 logging:
   level: "info"
@@ -24,11 +24,11 @@ database:
   # ADR-030 Section 6: Secrets loaded from mounted files
   secretsFile: "/app/secrets/database-credentials.yaml"
   passwordKey: "password"
-  sslmode: "disable"
-  max_open_conns: 25
-  max_idle_conns: 5
-  conn_max_lifetime: "5m"
-  conn_max_idle_time: "5m"
+  sslMode: "disable"
+  maxOpenConns: 25
+  maxIdleConns: 5
+  connMaxLifetime: "5m"
+  connMaxIdleTime: "5m"
 
 redis:
   addr: "localhost:6379"  # Host network
